--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,2 @@
-export DOCKER_USERNAME=$(op item get "Docker" --fields="username") 
-export DOCKER_PASSWORD=$(op item get "Docker" --fields="password") 
+export DOCKER_USERNAME=$(op.exe item get "Docker" --fields="username") 
+export DOCKER_PASSWORD=$(op.exe item get "Docker" --fields="personal access token") 
