Add Vault keyprovider, add acceptance tests

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,3 @@
 export DOCKER_USERNAME=$(op.exe item get "Docker" --fields="username") 
 export DOCKER_PASSWORD=$(op.exe item get "Docker" --fields="personal access token") 
+export TEST_ACC=1
