--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,8 @@
-export DOCKER_USERNAME=$(op.exe item get "Docker" --fields="username") 
-export DOCKER_PASSWORD=$(op.exe item get "Docker" --fields="personal access token") 
+OP_CMD="op"
+if [[ $(grep -i Microsoft /proc/version) ]]; then
+	OP_CMD="op.exe"
+fi
+
+export DOCKER_USERNAME=$(${OP_CMD} item get "Docker" --fields="username") 
+export DOCKER_PASSWORD=$(${OP_CMD} item get "Docker" --fields="personal access token") 
 export TEST_ACC=1
